--- a/Sfmlengine.vcxproj.filters
+++ b/Sfmlengine.vcxproj.filters
@@ -21,12 +21,24 @@
     <ClCompile Include="source\LApplication.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="source\LGameObject.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="source\LRenderer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\constants.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\LApplication.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\LGameObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\LRenderer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
