Added a TestState to see if abstract LState class works and was successful. Need to add state switching in main game loop.

--- a/Sfmlengine.vcxproj.filters
+++ b/Sfmlengine.vcxproj.filters
@@ -30,7 +30,7 @@
     <ClCompile Include="source\LState.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="TestState.cpp">
+    <ClCompile Include="source\TestState.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -50,7 +50,7 @@
     <ClInclude Include="include\LState.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="TestState.h">
+    <ClInclude Include="include\TestState.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
