--- a/Sfmlengine.vcxproj
+++ b/Sfmlengine.vcxproj
@@ -24,7 +24,7 @@
     <ClCompile Include="source\LGameObject.cpp" />
     <ClCompile Include="source\LApplication.cpp" />
     <ClCompile Include="source\Main.cpp" />
-    <ClCompile Include="TestState.cpp" />
+    <ClCompile Include="source\TestState.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\constants.h" />
@@ -32,7 +32,7 @@
     <ClInclude Include="include\LGameObject.h" />
     <ClInclude Include="include\LRenderer.h" />
     <ClInclude Include="include\LState.h" />
-    <ClInclude Include="TestState.h" />
+    <ClInclude Include="include\TestState.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{26068E86-B443-47BE-831C-05BD4F5EE065}</ProjectGuid>
