--- a/Sfmlengine.vcxproj
+++ b/Sfmlengine.vcxproj
@@ -19,20 +19,20 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="source\LState.cpp" />
-    <ClCompile Include="source\LRenderer.cpp" />
-    <ClCompile Include="source\LGameObject.cpp" />
+    <ClCompile Include="source\States\LState.cpp" />
+    <ClCompile Include="source\Rendering\LRenderer.cpp" />
+    <ClCompile Include="source\GameObject\LGameObject.cpp" />
     <ClCompile Include="source\LApplication.cpp" />
     <ClCompile Include="source\Main.cpp" />
-    <ClCompile Include="source\TestState.cpp" />
+    <ClCompile Include="source\States\TestState.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\constants.h" />
+    <ClInclude Include="include\Utils\constants.h" />
     <ClInclude Include="include\LApplication.h" />
-    <ClInclude Include="include\LGameObject.h" />
-    <ClInclude Include="include\LRenderer.h" />
-    <ClInclude Include="include\LState.h" />
-    <ClInclude Include="include\TestState.h" />
+    <ClInclude Include="include\GameObject\LGameObject.h" />
+    <ClInclude Include="include\Rendering\LRenderer.h" />
+    <ClInclude Include="include\States\LState.h" />
+    <ClInclude Include="include\States\TestState.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{26068E86-B443-47BE-831C-05BD4F5EE065}</ProjectGuid>
