--- a/Sfmlengine.vcxproj.filters
+++ b/Sfmlengine.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="source\States\TestState.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="source\Input\LInputManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\LApplication.h">
@@ -51,6 +54,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\Utils\constants.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Input\LInputManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
