Filled out LInputManager class to handle Button events (OnPressed and OnReleased). Created a small LFREE macro to free memory and set nullptrs.

--- a/Sfmlengine.vcxproj.filters
+++ b/Sfmlengine.vcxproj.filters
@@ -59,5 +59,8 @@
     <ClInclude Include="include\Input\LInputManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\Utils\LMacros.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
