--- a/Sfmlengine.vcxproj
+++ b/Sfmlengine.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="source\States\LSplashState.cpp" />
     <ClCompile Include="source\Input\LInputManager.cpp" />
     <ClCompile Include="source\Main.cpp" />
     <ClCompile Include="source\States\LState.cpp" />
@@ -36,6 +37,7 @@
     <ClInclude Include="include\States\TestState.h" />
     <ClInclude Include="include\Input\LInputManager.h" />
     <ClInclude Include="include\Utils\LMacros.h" />
+    <ClInclude Include="include\States\LSplashState.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{26068E86-B443-47BE-831C-05BD4F5EE065}</ProjectGuid>
