Created a Player class for the Invaders game and implemented simple movement.

--- a/Sfmlengine.vcxproj
+++ b/Sfmlengine.vcxproj
@@ -19,7 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="source\Invaders\LInvadersGameState.cpp" />
+    <ClCompile Include="source\Invaders\Entities\LInvadersPlayer.cpp" />
+    <ClCompile Include="source\Invaders\States\LInvadersGameState.cpp" />
     <ClCompile Include="source\States\LSplashState.cpp" />
     <ClCompile Include="source\Input\LInputManager.cpp" />
     <ClCompile Include="source\Main.cpp" />
@@ -40,7 +41,8 @@
     <ClInclude Include="include\Utils\LMacros.h" />
     <ClInclude Include="include\States\LSplashState.h" />
     <ClInclude Include="include\Utils\LMathsUtils.h" />
-    <ClInclude Include="include\Invaders\LInvadersGameState.h" />
+    <ClInclude Include="include\Invaders\States\LInvadersGameState.h" />
+    <ClInclude Include="include\Invaders\Entities\LInvadersPlayer.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{26068E86-B443-47BE-831C-05BD4F5EE065}</ProjectGuid>
