--- a/Sfmlengine.vcxproj.filters
+++ b/Sfmlengine.vcxproj.filters
@@ -39,7 +39,10 @@
     <ClCompile Include="source\States\LSplashState.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="source\Invaders\LInvadersGameState.cpp">
+    <ClCompile Include="source\Invaders\States\LInvadersGameState.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="source\Invaders\Entities\LInvadersPlayer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -74,7 +77,10 @@
     <ClInclude Include="include\Utils\LMathsUtils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="include\Invaders\LInvadersGameState.h">
+    <ClInclude Include="include\Invaders\States\LInvadersGameState.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Invaders\Entities\LInvadersPlayer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
