Added LInvadersEnemy class. Moved Bullets into main game state for easier collision detection. Added Enemies into main invaders game state and handle spawning (in alternating rows) and also bullet/enemy collision.

--- a/Sfmlengine.vcxproj
+++ b/Sfmlengine.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="source\Invaders\Entities\LInvadersEnemy.cpp" />
     <ClCompile Include="source\Invaders\Entities\LInvadersBullet.cpp" />
     <ClCompile Include="source\Invaders\Entities\LInvadersPlayer.cpp" />
     <ClCompile Include="source\Invaders\States\LInvadersGameState.cpp" />
@@ -33,6 +34,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Invaders\Entities\LInvadersBullet.h" />
+    <ClInclude Include="include\Invaders\Entities\LInvadersEnemy.h" />
     <ClInclude Include="include\Utils\constants.h" />
     <ClInclude Include="include\LApplication.h" />
     <ClInclude Include="include\GameObject\LGameObject.h" />
