--- a/Sfmlengine.vcxproj.filters
+++ b/Sfmlengine.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="source\Invaders\Entities\LInvadersEnemy.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="source\Managers\LTextureManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\LApplication.h">
@@ -93,6 +96,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\Invaders\Entities\LInvadersEnemy.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Managers\LTextureManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
